[tool.poetry]
name = "data_repo_pages_test"
version = "0.1.0"
description = "Test of auto github pages repo."
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
data_common = { path = "src/data_common/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.scripts]
notebook = 'data_repo_pages_test.cli:main'

[notebook.settings]
default_page_title = "Settings file defined title"